eliminata stringa in italiano, aggiunto heart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,8 @@
     <div class="container mt-1">
       <div class="jumbotron text-center">
         <h4>Password Generator</h4>
-        <p class="lead">by Fabio Z Tessitore</p>
-        <p class="text-center">v. 0.1.0</p>
+        <p class="lead"><small>Coded with &#10084; by Fabio Z Tessitore</small></p>
+        <p class="text-center">v. 0.1.1</p>
       </div>
 
       <div class="row">
@@ -108,7 +108,7 @@
         </div>
       </div>
 
-      <div class="card mt-3"><h4 id="passwd" class="card-title text-center text-secondary p-3">Esempio di Password</h4></div>
+      <div class="card mt-3"><h4 id="passwd" class="card-title text-center text-secondary p-3">Password</h4></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
