changed password font

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <title>Password Generator</title>
   </head>
 
@@ -15,7 +16,7 @@
       <div class="jumbotron text-center">
         <h4>Password Generator</h4>
         <p class="lead"><small>Coded with &#10084; by Fabio Z Tessitore</small></p>
-        <p class="text-center">v. 0.1.1</p>
+        <p class="text-center">v. 0.1.2</p>
       </div>
 
       <div class="row">
@@ -108,7 +109,7 @@
         </div>
       </div>
 
-      <div class="card mt-3"><h4 id="passwd" class="card-title text-center text-secondary p-3">Password</h4></div>
+      <div class="card mt-3"><h4 id="passwd" class="card-title text-center text-secondary p-3" style="font-family: 'Source Code Pro', serif;">Password</h4></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
