--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,13 +15,13 @@
     <div class="container mt-1">
       <div class="jumbotron text-center">
         <h4>Password Generator</h4>
-        <p class="lead"><small>Coded with &#10084; by Fabio Z Tessitore</small></p>
-        <p class="text-center">v. 0.1.3</p>
+        <small>Coded with &#x2615; and &#10084;<br>by Fabio Z Tessitore</small>
+        <br>v. 0.1.4
       </div>
 
       <div class="row">
         <div class="col-12">
-          <form>
+          <form action="#">
             <div class="form-row">
               <div class="col-3">
                 <div class="form-group"><p>Password Length:</p></div>
@@ -104,7 +104,7 @@
               </div>
             </div>
             -->
-            <button id="generate" class="btn btn-primary btn-block">Generate Password</button>
+            <button type="button" id="generate" class="btn btn-primary btn-block">Generate Password</button>
           </form>
         </div>
       </div>
