--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
         <h4>Password Generator</h4>
         <small>Coded with &#x2615; and &#10084;<br>by Fabio Z Tessitore</small>
         <br>v. 0.2.1
+        <br><small><a href="https://github.com/FabioZTessitore/password-generator">Fork on GitHub</a></small>
       </div>
 
       <div class="row">
